--- a/9_ECB.Rmd
+++ b/9_ECB.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 
 ```{r }
 library(pacman)
-pacman::p_load(ecb,tidyr,dplyr,glue,data.table,ggplot2)
+pacman::p_load(ecb,tidyr,dplyr,glue,data.table,ggplot2,lubridate)
 source(file = "money_theme.R")
 ```
 
@@ -41,36 +41,36 @@ df_ECB_yields =
                                '0M'='0',
                                '3M'='3',
                                '6M'='6',
-                               '9M'='9',
+                               # '9M'='9',
                                '1Y'=paste0(glue("{1*12}")),
                                '2Y'=paste0(glue("{2*12}")),
-                               '3Y'=paste0(glue("{3*12}")),
-                               '4Y'=paste0(glue("{4*12}")),
+                               # '3Y'=paste0(glue("{3*12}")),
+                               # '4Y'=paste0(glue("{4*12}")),
                                '5Y'=paste0(glue("{5*12}")),
-                               '6Y'=paste0(glue("{6*12}")),
-                               '7Y'=paste0(glue("{7*12}")),
-                               '8Y'=paste0(glue("{8*12}")),
-                               '9Y'=paste0(glue("{9*12}")),
+                               # '6Y'=paste0(glue("{6*12}")),
+                               # '7Y'=paste0(glue("{7*12}")),
+                               # '8Y'=paste0(glue("{8*12}")),
+                               # '9Y'=paste0(glue("{9*12}")),
                                '10Y'=paste0(glue("{10*12}")),
-                               '11Y'=paste0(glue("{11*12}")),
-                               '12Y'=paste0(glue("{12*12}")),
-                               '13Y'=paste0(glue("{13*12}")),
-                               '14Y'=paste0(glue("{14*12}")),
-                               '15Y'=paste0(glue("{15*12}")),
-                               '16Y'=paste0(glue("{16*12}")),
-                               '17Y'=paste0(glue("{17*12}")),
-                               '18Y'=paste0(glue("{18*12}")),
-                               '19Y'=paste0(glue("{19*12}")),
-                               '20Y'=paste0(glue("{20*12}")),
-                               '21Y'=paste0(glue("{21*12}")),
-                               '22Y'=paste0(glue("{22*12}")),
-                               '23Y'=paste0(glue("{23*12}")),
-                               '24Y'=paste0(glue("{24*12}")),
-                               '25Y'=paste0(glue("{25*12}")),
-                               '26Y'=paste0(glue("{26*12}")),
-                               '27Y'=paste0(glue("{27*12}")),
-                               '28Y'=paste0(glue("{28*12}")),
-                               '29Y'=paste0(glue("{29*12}")),
+                               # '11Y'=paste0(glue("{11*12}")),
+                               # '12Y'=paste0(glue("{12*12}")),
+                               # '13Y'=paste0(glue("{13*12}")),
+                               # '14Y'=paste0(glue("{14*12}")),
+                               # '15Y'=paste0(glue("{15*12}")),
+                               # '16Y'=paste0(glue("{16*12}")),
+                               # '17Y'=paste0(glue("{17*12}")),
+                               # '18Y'=paste0(glue("{18*12}")),
+                               # '19Y'=paste0(glue("{19*12}")),
+                               # '20Y'=paste0(glue("{20*12}")),
+                               # '21Y'=paste0(glue("{21*12}")),
+                               # '22Y'=paste0(glue("{22*12}")),
+                               # '23Y'=paste0(glue("{23*12}")),
+                               # '24Y'=paste0(glue("{24*12}")),
+                               # '25Y'=paste0(glue("{25*12}")),
+                               # '26Y'=paste0(glue("{26*12}")),
+                               # '27Y'=paste0(glue("{27*12}")),
+                               # '28Y'=paste0(glue("{28*12}")),
+                               # '29Y'=paste0(glue("{29*12}")),
                                '30Y'=paste0(glue("{30*12}")))))) %>% 
   dplyr::mutate(obsvalue=obsvalue/100)
 ```
