--- a/3_Predict_US_Interest_Rates.Rmd
+++ b/3_Predict_US_Interest_Rates.Rmd
@@ -29,7 +29,12 @@ add_fomc_meeting_dates = function() {
                             ymd("2022-07-27"),
                             ymd("2022-09-21"),
                             ymd("2022-11-02"),
-                            ymd("2022-12-14")),linetype=2,color="#eb493a")
+                            ymd("2022-12-14"),
+                            ymd("2023-02-01"),
+                            ymd("2023-03-15"),
+                            ymd("2023-05-03"),
+                            ymd("2023-06-14"),
+                            ymd("2023-07-26")),linetype=2,color="#eb493a")
 }
 ```
 
@@ -107,6 +112,15 @@ df_DK = df_DK %>%
 ```
 
 ```{r}
+df_INFLATION = 
+  fredr(series_id = "CPIAUCSL") %>% 
+  arrange(date) %>% 
+  dplyr::mutate(value=100*((value/lag(x = value,n = 12))-1))
+
+```
+
+
+```{r}
 
 df_checkboard = expand.grid(series_id=unique(df_yieldcurve$series_id),
                             joined_series=unique(df_yieldcurve$series_id))
@@ -175,6 +189,15 @@ df_DK_Long =
   tidyr::complete(date=seq.Date(from=min(date,na.rm=T),to=max(date,na.rm=T),by="1 day")) %>% 
   tidyr::fill(value,.direction = "down")
 
+df_CPIAUCSL = 
+  df_INFLATION %>% 
+  filter(series_id=="CPIAUCSL") %>% 
+  dplyr::select(date,value) %>% 
+  tidyr::complete(date=seq.Date(from=min(date,na.rm=T),to=max(date,na.rm=T),by="1 day")) %>% 
+  tidyr::fill(value,.direction = "down")
+
+
+
 ```
 
 
@@ -236,6 +259,26 @@ df_predict_DK_Long = df_yield_checkboard %>%
   dplyr::select(date,series_id,spread,value) %>% 
   spread(series_id,spread) %>% 
   arrange(desc(date))
+
+df_predict_DK_Long = df_yield_checkboard %>% 
+  filter(series_id!=joined_series) %>% 
+  dplyr::mutate(one_year_ahead=date+years(1)) %>% 
+  left_join(df_DK_Long,by=c("one_year_ahead"="date")) %>% 
+  unite(series_id,series_id,joined_series) %>% 
+  dplyr::select(date,series_id,spread,value) %>% 
+  spread(series_id,spread) %>% 
+  arrange(desc(date))
+
+df_predict_CPIAUCSL = df_yield_checkboard %>% 
+  filter(series_id!=joined_series) %>% 
+  dplyr::mutate(one_year_ahead=date+years(1)) %>% 
+  left_join(df_CPIAUCSL,by=c("one_year_ahead"="date")) %>% 
+  unite(series_id,series_id,joined_series) %>% 
+  dplyr::select(date,series_id,spread,value) %>% 
+  spread(series_id,spread) %>% 
+  arrange(desc(date))
+
+
 
 ```
 
@@ -319,6 +362,18 @@ fit_DK_Long = caret::train(x = df_predict_DK_Long %>%
                               dplyr::select(-date,-value) %>% 
                               data.frame(),
                          y = df_predict_DK_Long %>% 
+                           na.omit %>% 
+                           .[["value"]],
+                         method = "rf",
+                         tuneGrid=tune_grid,
+                         ntree=num_trees,
+                         metric = "RMSE",
+                         trControl=train_control)
+fit_CPIAUCSL = caret::train(x = df_predict_CPIAUCSL %>% 
+                              na.omit %>% 
+                              dplyr::select(-date,-value) %>% 
+                              data.frame(),
+                         y = df_predict_CPIAUCSL %>% 
                            na.omit %>% 
                            .[["value"]],
                          method = "rf",
@@ -630,3 +685,37 @@ df_predict_DK_Short %>%
        caption = timestamp_caption())
 
 ```
+
+## Inflation Expectations
+
+```{r fig.width=15,fig.height=15}
+
+df_predict_CPIAUCSL %>% 
+  dplyr::mutate(pred_CPIAUCSL=predict(fit_CPIAUCSL,.)) %>% 
+  dplyr::select(date,pred_CPIAUCSL,value) %>% 
+  dplyr::mutate(date=date+years(1)) %>%
+  gather(pred,val,pred_CPIAUCSL:value) %>%
+  crossing(one_year=c(TRUE,FALSE)) %>% 
+  dplyr::mutate(date=ifelse(one_year,
+                            ifelse(date>=Sys.Date()-years(1),date,NA),date)) %>% 
+  filter(!is.na(date)) %>% 
+  dplyr::mutate(date=as.Date(date,origin="1970-01-01")) %>%
+  filter(one_year) %>% 
+  ggplot(.,aes(x=date,y=val,color=pred)) +
+  geom_line(size=1) +
+  scale_x_date(date_breaks = "1 month",date_labels = "%b") +
+  scale_y_continuous(breaks = seq(0,10,0.1)) +
+  theme(axis.text.x=element_text(angle=45,hjust=1)) +
+  add_fomc_meeting_dates() +
+  geom_vline(xintercept = Sys.Date(),linetype=2) +
+  # geom_hline(yintercept = 0,linetype=2) +
+  # facet_wrap(~one_year,scales="free",ncol=1) +
+  theme_money_printer_go_brrr(base_size=20) +
+  labs(title="Predicted/Observed YoY Inflation",
+       x=NULL,
+       y="(%)",
+       caption = timestamp_caption())
+
+```
+
+
