--- a/3_Predict_US_Interest_Rates.Rmd
+++ b/3_Predict_US_Interest_Rates.Rmd
@@ -96,7 +96,7 @@ df_yieldcurve =
 
 source_url = "https://finansdanmark.dk/tal-og-data/boligstatistik/obligationsrenter/"
 current_url = xml2::read_html(source_url) %>%
-  html_node("#wrapper > div > div.sectionB > div.container > div > div.span8 > p:nth-child(10) > a") %>% 
+  html_node("#wrapper > div > div.sectionB > div.container > div > div.span8 > p:nth-child(11) > a") %>% 
   rvest::html_attr("href")
 xlsx_url = paste0("https://finansdanmark.dk/",current_url)
 
@@ -285,6 +285,9 @@ df_predict_CPIAUCSL = df_yield_checkboard %>%
 
 ```{r}
 
+
+tune_grid=data.frame(mtry=c(5))
+
 fit_DFF = caret::train(x = df_predict_DFF %>% 
                               na.omit %>% 
                               dplyr::select(-date,-value) %>% 
@@ -297,6 +300,7 @@ fit_DFF = caret::train(x = df_predict_DFF %>%
                          ntree=num_trees,
                          metric = "RMSE",
                          trControl=train_control)
+
 fit_DGS2 = caret::train(x = df_predict_DGS2 %>% 
                               na.omit %>% 
                               dplyr::select(-date,-value) %>% 
@@ -385,6 +389,36 @@ fit_CPIAUCSL = caret::train(x = df_predict_CPIAUCSL %>%
 
 
 ## Predicted US Yield
+
+```{r fig.width=15,fig.height=15}
+
+df_predict_DFF %>% 
+  dplyr::mutate(pred_DFF=predict(fit_DFF,.)) %>% 
+  dplyr::select(date,pred_DFF) %>% 
+  dplyr::mutate(date=date+years(1)) %>%
+  gather(pred,val,pred_DFF) %>%
+  crossing(one_year=c(TRUE,FALSE)) %>% 
+  dplyr::mutate(date=ifelse(one_year,
+                            ifelse(date>=Sys.Date()-years(1),date,NA),date)) %>% 
+  filter(!is.na(date)) %>% 
+  dplyr::mutate(date=as.Date(date,origin="1970-01-01")) %>%
+  filter(!one_year) %>% 
+  ggplot(.,aes(x=date,y=val,color=pred)) +
+  geom_line(size=1) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  scale_y_continuous(breaks = seq(0,10,0.5)) +
+  theme(axis.text.x=element_text(angle=45,hjust=1)) +
+  geom_vline(xintercept = Sys.Date(),linetype=2) +
+  geom_hline(yintercept = 0,linetype=2) +
+  # facet_wrap(~one_year,scales="free",ncol=1) +
+  theme_money_printer_go_brrr(base_size=20) +
+  labs(title="Predicted/Observed T-Bond Yields",
+       x=NULL,
+       y="(%)",
+       caption = timestamp_caption())
+           
+
+```
 
 ```{r fig.width=15,fig.height=15}
 
