--- a/2_Obligationsrenter.Rmd
+++ b/2_Obligationsrenter.Rmd
@@ -36,7 +36,7 @@ fit_draw_abline = function(date1,date2,value1,value2) {
 
 source_url = "https://finansdanmark.dk/tal-og-data/boligstatistik/obligationsrenter/"
 current_url = xml2::read_html(source_url) %>%
-  html_node("#wrapper > div > div.sectionB > div.container > div > div.span8 > p:nth-child(11) > a") %>% 
+  html_node("body > main > div > div.page-header > div.page-header__content > div > div.row > div.col-12.col-md-8 > div > p:nth-child(11) > a") %>% 
   rvest::html_attr("href")
 xlsx_url = paste0("https://finansdanmark.dk/",current_url)
 
@@ -44,8 +44,9 @@ xlsx_url = paste0("https://finansdanmark.dk/",current_url)
 
 ```{r}
 
-df_interest = openxlsx::read.xlsx(xlsxFile = xlsx_url,startRow = 3)
-
+df_interest = openxlsx::read.xlsx(xlsxFile = xlsx_url,startRow = 1)
+df_interest$År[1] = 1997
+df_interest = df_interest %>% fill(År,.direction = "down")
 df_interest$Date = as.Date(paste(df_interest$År, df_interest$Uge, 1, sep="-"), "%Y-%U-%u")
 df_interest = df_interest %>% 
   dplyr::select(Date,Kort.rente,Lang.rente) %>% 
