predict finansdanmark wrong

--- a/3_Predict_US_Interest_Rates.Rmd
+++ b/3_Predict_US_Interest_Rates.Rmd
@@ -96,11 +96,15 @@ df_yieldcurve =
 
 source_url = "https://finansdanmark.dk/tal-og-data/boligstatistik/obligationsrenter/"
 current_url = xml2::read_html(source_url) %>%
-  html_node("#wrapper > div > div.sectionB > div.container > div > div.span8 > p:nth-child(11) > a") %>% 
+  html_node("body > main > div > div.page-header > div.page-header__content > div > div.row > div.col-12.col-md-8 > div > p:nth-child(11) > a") %>% 
   rvest::html_attr("href")
 xlsx_url = paste0("https://finansdanmark.dk/",current_url)
 
-df_DK = openxlsx::read.xlsx(xlsxFile = xlsx_url,startRow = 3)
+openxlsx::read.xlsx(xlsxFile = xlsx_url,startRow = 1)
+
+
+df_interest$År[1] = 1997
+df_interest = df_interest %>% fill(År,.direction = "down")
 
 df_DK$date = as.Date(paste(df_DK$År, df_DK$Uge, 1, sep="-"), "%Y-%U-%u")
 df_DK = df_DK %>% 
@@ -109,6 +113,13 @@ df_DK = df_DK %>%
          DK_Long=Lang.rente) %>% 
   dplyr::mutate( DK_Spread = DK_Short - DK_Long ) %>% 
   gather(series_id,value,DK_Short:DK_Spread)
+
+# df_interest$Date = as.Date(paste(df_interest$År, df_interest$Uge, 1, sep="-"), "%Y-%U-%u")
+# df_interest = df_interest %>% 
+#   dplyr::select(Date,Kort.rente,Lang.rente) %>% 
+#   dplyr::mutate( CurveLongShort = Lang.rente - Kort.rente )
+
+# max_date = max(df_interest$Date,na.rm = T)
 ```
 
 ```{r}
